fix: Fix compile error from cherry-pick